.kubernetes/services/http.yml
apiVersion: v1
kind: Service
metadata:
  name: http
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: http
