.kubernetes/services/https.yml
apiVersion: v1
kind: Service
metadata:
  name: https
spec:
  ports:
    - name: "443"
      port: 443
      targetPort: 443
  selector:
    app: https
