.kubernetes/services/gateway-test.yml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: internal-http
spec:
  gatewayClassName: gke-l7-rilb
  listeners:
  - name: http
    protocol: HTTP
    port: 80


---


kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: http
spec:
  parentRefs:
  - kind: Gateway
    name: internal-http
  hostnames:
  - "matthewhill.click"
  rules:
  - backendRefs:
    - name: http
      port: 80
