.kubernetes/services/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: gke-l7-global-external-managed-mc
  listeners:
  - name: http
    protocol: HTTP
    port: 80
  - name: https
    protocol: HTTPS
    port: 443

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http
spec:
  rules:
  - backendRefs:
    - name: http
      port: 80


---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https
spec:
  rules:
  - backendRefs:
    - name: https
      port: 443
